crates/wac-parser/tests/resolution/fail/mismatched-variant-case-type.wac
package test:comp;

import x: interface {
    variant v {
        a,
        b(u16),
        c(tuple<string, string>),
    }
};

let i = new foo:bar { x };
